--- a/src/app/home/vocabulary/vocabulary.component.html
+++ b/src/app/home/vocabulary/vocabulary.component.html
@@ -1,14 +1,14 @@
 <div class="home" *ngIf="showVocabulary">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+            <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                 <tr>
                     <th class="px-6 py-3">{{language1}}</th>
                     <th class="px-6 py-3">{{language2}}</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let word of uniqueVoc.words" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-slate-200">
+                <tr *ngFor="let word of uniqueVoc.words" class="bg-white border-b  hover:bg-slate-200">
                     <td class="px-6 py-4">{{ word[0] }}</td> <!-- French word -->
                     <td class="px-6 py-4">{{ word[1] }}</td> <!-- German translation -->
                 </tr>
