--- a/src/app/quizz/quizz.component.html
+++ b/src/app/quizz/quizz.component.html
@@ -23,6 +23,7 @@
               </div>
             </div>
           </div>
+        <button class="btn-submit" (click)="finishQuizz()">Finish Quizz</button>
     </div>
     <div *ngIf="quizzIsFinished" class="home">
         <app-score [userQuizzAnswers]="userQuizzAnswers">
