--- a/src/app/quizz/quizz.component.scss
+++ b/src/app/quizz/quizz.component.scss
@@ -25,3 +25,8 @@
 .bin__passed{
     @apply w-5 h-2 shadow-md bg-red-300
 }
+
+.btn-submit{
+   @apply block mx-auto bg-red-300 border-none rounded-xl py-2 px-4 mt-6 text-slate-100
+  
+}
