--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,7 +1,7 @@
 <div class="home">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+            <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                 <tr>
                     <th class="px-6 py-3">{{language1}}</th>
                     <th class="px-6 py-3">{{language2}}</th>
