add words component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,7 @@
     >
 
     </app-categories>
+    <app-words></app-words>
     <app-vocabulary *ngIf="languageWasChoosen && categoryWasChoosen" [vocabulary]="vocabulary">
 
     </app-vocabulary>
