add words to vocabulary

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
     >
 
     </app-categories>
-    <app-words></app-words>
+    <app-words *ngIf="categoryWasChoosen"></app-words>
     <app-vocabulary *ngIf="languageWasChoosen && categoryWasChoosen" [vocabulary]="vocabulary">
 
     </app-vocabulary>
