--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,23 +1,31 @@
-<div class="home">
+<div class="flex-grow sm:ml-64 mt-24 mb-10">
+  <app-sidebar-for-quizz></app-sidebar-for-quizz>
+  <div class="home">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50">
-                <tr>
-                    <th class="px-6 py-3">{{language1}}</th>
-                    <th class="px-6 py-3">{{language2}}</th>
-                    <th class="px-6 py-3">Your answered</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let el of userQuizzAnswers" class="bg-white border-b"
-                >
-                    <td class="px-6 py-4">{{ el.question }}</td> 
-                    <td class="px-6 py-4">{{ el.correctAnswer }}</td> 
-                    <td class="px-6 py-4"
-                    [ngClass]="{'correct-answer': el.userAnswer === el.correctAnswer, 'falsy-answer': el.userAnswer !== el.correctAnswer }"
-                    >{{ el.userAnswer }}</td>
-                </tr>
-            </tbody>
-        </table>
+      <div class="score-banner " [ngClass]="getBackgroundColor()">
+        <p>You Scored : {{ score }} out of {{ answerCount }}</p>
+      </div>
+      <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+        <tr>
+          <th class="px-6 py-3">{{ language1 }}</th>
+          <th class="px-6 py-3">{{ language2 }}</th>
+          <th class="px-6 py-3">Your answered</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let el of userQuizzAnswers" class="bg-white border-b"
+        >
+          <td class="px-6 py-4">{{ el.question }}</td>
+          <td class="px-6 py-4">{{ el.correctAnswer }}</td>
+          <td class="px-6 py-4"
+              [ngClass]="{'correct-answer': el.userAnswer === el.correctAnswer, 'falsy-answer': el.userAnswer !== el.correctAnswer }"
+          >{{ el.userAnswer }}
+          </td>
+        </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
