delete words from vocabulary

--- a/src/app/home/vocabulary/vocabulary.component.html
+++ b/src/app/home/vocabulary/vocabulary.component.html
@@ -1,22 +1,31 @@
 <div class="home" *ngIf="showVocabulary">
-    <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50">
-                <tr>
-                    <th class="px-6 py-3">{{language1}}</th>
-                    <th class="px-6 py-3">{{language2}}</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let word of uniqueVoc.words" class="bg-white border-b  hover:bg-slate-200">
-                    <td class="px-6 py-4">{{ word[0] }}</td> <!-- French word -->
-                    <td class="px-6 py-4">{{ word[1] }}</td> <!-- German translation -->
-                </tr>
-            </tbody>
-        </table>
-    </div>
+  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+      <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+        <tr>
+          <th class="px-6 py-3">{{ language1 }}</th>
+          <th class="px-6 py-3">{{ language2 }}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          *ngFor="let word of uniqueVoc.words; let i = index"
+          class="bg-white border-b hover:bg-slate-200"
+        >
+          <td class="px-6 py-4">{{ word[0] }}</td>
+          <!-- word -->
+          <td class="px-6 py-4">{{ word[1] }}</td>
+          <!-- translation -->
+          <td class="px-6 py-4">
+            <button (click)="deleteWord(i)" class="text-red-500 hover:text-red-700">
+                <i class="fas fa-trash-alt"></i>
+              </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <div class="home" *ngIf="showAlertNoVocabulary">
-    <h1 class="alert-no-categories"> You don't have any languages!</h1>
+  <h1 class="alert-no-categories">You don't have any languages!</h1>
 </div>
-
