--- a/src/app/home/categories/categories.component.scss
+++ b/src/app/home/categories/categories.component.scss
@@ -20,5 +20,5 @@ h1{
 }
 
 .alert-no-categories{
-    @apply bg-red-500 text-slate-100 p-3 rounded-lg text-center
+    @apply bg-red-500 text-slate-100 rounded-lg text-center mb-5 mt-0
 }
