--- a/src/app/home/vocabulary/vocabulary.component.html
+++ b/src/app/home/vocabulary/vocabulary.component.html
@@ -17,6 +17,6 @@
     </div>
 </div>
 <div class="home" *ngIf="showAlertNoVocabulary">
-    <h1 class="alert-no-categories"> You don't have any languages!</h1>
+    <h1 class="alert-no-categories"> You don't have any vocabulary!</h1>
 </div>
 
