--- a/src/app/home/vocabulary/vocabulary.component.html
+++ b/src/app/home/vocabulary/vocabulary.component.html
@@ -5,6 +5,7 @@
         <tr>
           <th class="px-6 py-3">{{ language1 }}</th>
           <th class="px-6 py-3">{{ language2 }}</th>
+          <th class="px-6 py-3"></th>
         </tr>
       </thead>
       <tbody>
