--- a/src/app/home/words/words.component.scss
+++ b/src/app/home/words/words.component.scss
@@ -1,6 +1,6 @@
 .input{
-    @apply border-none py-2 bg-stone-100 pl-3 pr-7 mr-4 rounded-md mt-3
+    @apply border-none py-2 bg-stone-100 pl-3 pr-7 rounded-lg
 }
 .button{
-    @apply flex p-2 bg-green-400 rounded-md px-6 mt-4
+    @apply py-2 bg-green-300 rounded-lg px-6
 }
