--- a/src/app/home/words/words.component.html
+++ b/src/app/home/words/words.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" style="display: flex; flex-wrap: wrap; gap: 10px">
+<!--<form (ngSubmit)="onSubmit()" style="display: flex; flex-wrap: wrap; gap: 10px">
   <div style="flex: 1">
     <label for="originalWord">Original Word:</label>
     <input
@@ -22,4 +22,29 @@
     />
   </div>
   <button class="button" type="submit">Submit</button>
+</form>-->
+
+<h1 class="text-slate-400 px-4 py-4">Add new word to vocabulary</h1>
+<form (ngSubmit)="onSubmit()"
+class="flex flex-row justify-start items-center gap-3 px-4">
+    <input
+      class="input"
+      type="text"
+      id="originalWord"
+      name="originalWord"
+      [(ngModel)]="originalWord"
+      required
+      placeholder="original"
+    />
+    <input
+      class="input"
+      type="text"
+      id="targetWord"
+      name="targetWord"
+      [(ngModel)]="targetWord"
+      required
+      placeholder="traduction"
+    />
+
+  <button class="button" type="submit">Add!</button>
 </form>
