fix add languages bug, fix sidebar - when the screen is small only icons appear

--- a/src/app/quizz/quizz.component.html
+++ b/src/app/quizz/quizz.component.html
@@ -1,4 +1,4 @@
-<div class="flex-grow sm:ml-64 mt-24 mb-10">
+<div class="flex-grow ml-16 sm:ml-64 mt-24 mb-10">
     <app-sidebar-for-quizz>
 
     </app-sidebar-for-quizz>
