--- a/src/app/home/languages/languages.component.html
+++ b/src/app/home/languages/languages.component.html
@@ -14,6 +14,8 @@
     </div>
 </div>
 <div class="home" *ngIf="showAlertNoLanguage">
+    <h1><span class="underline underline-offset-4 font-bold"
+        (click)="createNewLanguagePair()">Create</span> a new language!</h1>
     <h1 class="alert-no-categories"> You don't have any languages!</h1>
 </div>
 
