--- a/src/app/home/vocabulary/vocabulary.component.html
+++ b/src/app/home/vocabulary/vocabulary.component.html
@@ -1,10 +1,10 @@
 <div class="home" *ngIf="showVocabulary">
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500">
-      <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+      <thead class="text-xs text-gray-700 bg-gray-50">
         <tr>
-          <th class="px-6 py-3">{{ language1 }}</th>
-          <th class="px-6 py-3">{{ language2 }}</th>
+          <th class="px-6 py-3">{{ language1 | uppercase }}</th>
+          <th class="px-6 py-3">{{ language2 | uppercase }}</th>
           <th class="px-6 py-3"></th>
         </tr>
       </thead>
