--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -27,5 +27,8 @@
         </tbody>
       </table>
     </div>
+    <div class="flex justify-center text-lg mt-5 text-slate-400">
+      {{score | scoreMessage: answerCount}}
+    </div>
   </div>
 </div>
