--- a/src/app/home/categories/categories.component.scss
+++ b/src/app/home/categories/categories.component.scss
@@ -1,5 +1,5 @@
 .home{
-    @apply px-4 py-4 border-b border-b-slate-100 overflow-y-auto max-h-60 
+    @apply px-4 py-4 border-b 
 }
 
 h1{
@@ -7,10 +7,10 @@ h1{
 }
 
 .grid{
-    @apply lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-3;
+    @apply lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-3 border-b-slate-100 overflow-y-auto max-h-60;
 
     &__item{
-        @apply text-black rounded-xl border-2 border-red-200 text-center py-2 px-0 hover:bg-red-200 mb-2;
+        @apply relative text-black rounded-xl border-2 border-red-200 text-center py-2 px-0 hover:bg-red-200 mb-2;
 
         &__selected{
             @apply bg-red-200
