--- a/src/app/home/languages/languages.component.scss
+++ b/src/app/home/languages/languages.component.scss
@@ -1,5 +1,5 @@
 .home{
-    @apply px-4 py-4 border-b border-b-slate-100 overflow-y-auto max-h-60
+    @apply px-4 py-4 
 }
 
 h1{
@@ -7,7 +7,7 @@ h1{
 }
 
 .grid{
-    @apply lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-3;
+    @apply lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-1 gap-3 border-b border-b-slate-100 overflow-y-auto max-h-60;
 
     &__item{
         @apply text-black rounded-xl border-2 border-red-200 text-center py-2 px-0 hover:bg-red-200 mb-2;
